@@ -1,10 +1,17 @@
 # HKU-COMP3358-JPoker24
 
-## 1. Quick Start
+**Document Directory**
+|Section|Title|Link|
+|-|-|-|
+|1|Environment Set Up|[Link](#1-environment-set-up)|
+|2|How to Run|[Link](#2-how-to-run-the-program)|
+|3|Game Demo|[Link](#3-game-demo)|
 
-This section provides a guidence on how to set up the environment and run the code.
+## 1. Environment Set Up
 
-### 1.1 Running Environment
+This section provides a guidence on how to set up the environment to run the jar.
+
+### 1.1 Overview
 
 **System**
 
@@ -13,9 +20,9 @@ This section provides a guidence on how to set up the environment and run the co
 **Dependencies**
 
 - openjdk version "11.0.22" 2024-01-16
-- glassfish-6.1.0
 - mysql Ver 8.0.36-0ubuntu0.22.04.1 for Linux on x86_64 ((Ubuntu))
 - mysql-connector-j_8.4.0-1ubuntu22.04_all
+- glassfish-6.1.0
 
 **Assumption**
 
@@ -109,36 +116,133 @@ Quit MySQL Console.
 
 - Enter you glassfish admin console at [http://localhost:4848](http://localhost:4848), and login to it.
 - Under side bar, navigate to `Resources -> JMS Resources -> Connection Factories`.
-
-![Glassfish Connection Factory](./readme_assets/images/glassfish_1.png)
+  ![Glassfish Connection Factory](./readme_assets/images/glassfish_1.png)
 
 - Click `New` Button on the right Panel to create a `JPoker24GameConnectionFactory`, the field `JNDI Name` is `jms/JPoker24GameConnectionFactory` and the `Resource Type` is `jakarta.jms.ConnectionFactory`.
 
-![Glassfish Connection Factory Set Up](./readme_assets/images/glassfish_2.png)
+  ![Glassfish Connection Factory Set Up](./readme_assets/images/glassfish_2.png)
 
 - Under side bar, navigate to `Resources -> JMS Resources -> Destination Resources`.
 
-![Glassfish Destination Resources](./readme_assets/images/glassfish_3.png)
+  ![Glassfish Destination Resources](./readme_assets/images/glassfish_3.png)
 
 - Click `New` Button on the right Panel to create a `JPoker24GameQueue`, the field `JNDI Name` is `jms/JPoker24GameQueue`, the `Physical Destination Name` is `JPoker24GameQueue`, and the `Resource Type` is `jakarta.jms.Queue`.
 
-![Glassfish Destination Resources](./readme_assets/images/glassfish_4.png)
+  ![Glassfish Destination Resources](./readme_assets/images/glassfish_4.png)
 
 - Click `New` Button on the right Panel to create a `JPoker24GameTopic`, the field `JNDI Name` is `jms/JPoker24GameTopic`, the `Physical Destination Name` is `JPoker24GameTopic`, and the `Resource Type` is `jakarta.jms.Topic`.
 
-![Glassfish Destination Resources](./readme_assets/images/glassfish_5.png)
+  ![Glassfish Destination Resources](./readme_assets/images/glassfish_5.png)
 
-### 1.4 Run the Server, Client & Database
+## 2 How to Run the Program
 
-## 2. Demo
+#### 2.1 Run Server & Client
+
+1. Open the terminal under `JPoker24Game` directory.
+
+   ```
+   JPoker24Game                (You are Here)
+   ├── Report.pdf
+   ├── lib
+   ├── JPoker24Game.jar
+   ├── JPoker24GameServer.jar
+   └── security.policy
+   ```
+
+2. Enter command below to check the availability of port 1099.
+
+   ```bash
+   sudo netstat -tulpn | grep 1099
+   ```
+
+3. If Occupied, enter command below to kill the thread. Replace **$PID** with the PID shown output of the command above.
+
+   ```bash
+   sudo kill -9 $PID
+   ```
+
+4. To start the server, use the command template below:
+
+   ```bash
+   java -cp "$server_jar_path\
+   :$mysql_connector_path\
+   :$gf_client_path" \
+   -Djava.security.manager -Djava.security.policy=$security_policy_path \
+   com.server.ServerMain
+   ```
+
+   4.1 Replace **$server_jar_path** with path to **JPoker24GameServer.jar**.
+
+   4.2 Replace **$mysql_connector_path** with the path to **mysql-connector-j-8.4.0.jar**.
+
+   4.3 Replace **$gf_client_path** with path to **gf-client.jar** of glassfish 6.1.0.
+
+   4.4 Replace **$security_policy_path** with path to **security.policy**.
+
+   4.5 Below are the command if you run in the `/JPoker24Game` directory and using `lib` provided:
+
+   ```bash
+   java -cp "JPoker24GameServer.jar\
+   :lib/glassfish-6.1.0/glassfish6/glassfish/lib/gf-client.jar\
+   :lib/mysql-connector-j_8.4.0-1ubuntu22.04_all/usr/share/java/mysql-connector-j-8.4.0.jar"\
+   -Djava.security.manager \
+   -Djava.security.policy=security.policy \
+   com.server.ServerMain
+   ```
+
+5. To start the client, use the command template below:
+
+   ```bash
+   java -cp "$client_jar_path\
+   :$gf_client_path" \
+   -Djava.security.manager \
+   -Djava.security.policy=$security_policy_path \
+   com.client.ClientMain localhost
+   ```
+
+   5.1 Replace **$client_jar_path** with path to **JPoker24Game.jar**.
+
+   5.2 Replace **$gf_client_path** with path to **gf-client.jar** of glassfish 6.1.0.
+
+   5.3 Replace **$security_policy_path** with path to **security.policy**.
+   5.4 Below are the command if you run in the `/JPoker24Game` directory and using `lib` provided::
+
+   ```bash
+   java -cp "JPoker24Game.jar\
+   :lib/glassfish-6.1.0/glassfish6/glassfish/lib/gf-client.jar"\
+   -Djava.security.manager \
+   -Djava.security.policy=security.policy \
+   com.server.ClientMain localhost
+   ```
+
+### 2.2 Inspect the MySQL Database
+
+1. Open MySQL console in linux terminal.
+
+   ```bash
+   sudo mysql -u root -p
+   ```
+
+2. Switch to the database we use.
+   ```sql
+   USE GameDB;
+   ```
+3. Repeatly enter commands below to inspect the three tables we created.
+   ```sql
+   SELECT * FROM Users;
+   SELECT * FROM Games;
+   SELECT * FROM Participations;
+   ```
+
+## 3. Game Demo
 
 ### 2.1 Login & Sign Up
 
 ### 2.2 Game Play
 
-#### 2.2.1 Game Start with 4 Players
+#### 2.2.1 Basic Game Stages
 
-#### 2.2.2 Game Start with 2-3 Players
+#### 2.2.2 Game Start with 2-4 Players
 
 #### 2.2.3 Game with Multi-Session
 
